src/styles/Player.module.css
.container {
  position: sticky;
  bottom: 0;
  left: 0;
  right: 0;
  top: auto;

  width: 100%;
  padding: 1rem;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* align-items: center; */

  background-color: var(--background-color);
  border-top: 1px solid var(--shadow);
  box-shadow: 0 0px 20px var(--shadow);
}

.container.desktop {
  display: none;
}

.container button {
  background-color: transparent;
  border: none;
}

.container.mobileFullscreenView {
  z-index: 100;
  position: fixed;
  top: 0;

  flex-direction: column;
  justify-content: flex-end;
}

.minimizeButton {
  position: fixed;
  left: 5%;
  top: 3rem;
  width: 30px;
}

.minimizeButtonIcon {
  width: 3rem;
  height: auto;
}

.songBox {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.container.mobileFullscreenView .songBox {
  margin: 0 0 1rem;

  flex-direction: column;
}

.albumCoverIcon {
  width: 3rem;
  height: auto;
}

.container.mobileFullscreenView .albumCoverIcon {
  width: 80%;
  height: auto;
  margin: 2rem 0 5vh;
}

.container.mobileFullscreenView .songInfoWithHeart {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: calc(80%);
}

.songInfo {
  margin: 0 0.5rem;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.songInfo > .title {
  font-size: 1rem;
  color: var(--font-color);
}

.songInfo > .author {
  font-size: 0.8rem;
  color: var(--font-color);
  opacity: 0.7;
}

.container:not(.mobileFullscreenView) .heartIcon {
  display: none;
}

.heartIcon {
  width: 2rem;
  height: auto;
}

.container.mobileFullscreenView .controls {
  margin: 0 0 3rem;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.progressBarContainer {
  width: 100%;

  display: flex;
  justify-content: center;
  align-items: center;
}

.container.mobileFullscreenView .progressBarContainer {
  margin: 0rem 0 1rem;
  width: 80%;
  flex-direction: column;
}

.container.mobileFullscreenView .progressBar {
  width: 100%;
}

.container.mobileFullscreenView .timeLabels {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.container:not(.mobileFullscreenView) .timeLabels {
  display: none;
}

.container.mobileFullscreenView .volumeBarContainer {
  display: flex;
  justify-content: center;
}

.container:not(.mobileFullscreenView) .volumeBarContainer {
  display: none;
}

.container:not(.mobileFullscreenView) .progressBar,
.container:not(.mobileFullscreenView) .loopButton,
.container:not(.mobileFullscreenView) .skipBackButton,
.container:not(.mobileFullscreenView) .skipForwardButton,
.container:not(.mobileFullscreenView) .shuffleButton {
  display: none;
}

@media only screen and (min-width: 768px) {
  .container:is(.mobileFullscreenView) .albumCoverIcon {
    width: 60%;
    height: auto;
    margin: 2rem 0 5vh;
  }
}

@media only screen and (min-width: 1024px) {
  .container,
  .container.mobileFullscreenView {
    position: static;
    top: auto;
    min-height: 7.5rem;
    padding: 2rem;

    flex-direction: row;
    justify-content: flex-start;
  }

  .container.desktop {
    display: flex;
  }

  .minimizeButton {
    display: none;
  }

  .songBox,
  .container.mobileFullscreenView .songBox {
    margin: 0;

    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .container:is(.mobileFullscreenView) .albumCoverIcon,
  .container:not(.mobileFullscreenView) .albumCoverIcon {
    width: 4rem;
    height: auto;
    margin: 0;
  }

  .container .songInfoWithHeart {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: calc(80%);
  }

  .container.mobileFullscreenView .heartIcon,
  .container:not(.mobileFullscreenView) .heartIcon {
    display: block;
  }

  .container .controls,
  .container.mobileFullscreenView .controls {
    margin: 0;

    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    flex-grow: 0.8;
  }

  .container .progressBar,
  .container:not(.mobileFullscreenView) .progressBar {
    display: flex;
    width: 80%;
  }

  .container .controlButtons {
    margin: 0.5rem 0;
    display: flex;
    flex-direction: row;
  }

  .volumeBarContainer {
    flex: 0.2;
    display: flex;
    flex-direction: row;
    align-items: flex-end;
  }
  .container:not(.mobileFullscreenView) .volumeBarContainer {
    display: flex;
  }

  .container .loopButton,
  .container:not(.mobileFullscreenView) .loopButton,
  .container .skipBackButton,
  .container:not(.mobileFullscreenView) .skipBackButton,
  .container .skipForwardButton,
  .container:not(.mobileFullscreenView) .skipForwardButton,
  .container .shuffleButton,
  .container:not(.mobileFullscreenView) .shuffleButton {
    display: block;
  }
}

